# incolume.py.prospect.remove_background

./: .gitignore  main.py  pyproject.toml
incolumepy/prospect/remove_bkgrounds/: __init__.py  rmbg.py
tests/: test_incolumepy_prospect_remove_bkgrounds.py
