[tool.poetry]
name = "incolumepy.prospect.remove_bkgrounds"
version = "0.2.0-alpha.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include='incolumepy', from=''}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
