[tool.poetry]
name = "incolumepy.prospect.remove_bkgrounds"
version = "0.2.0-alpha.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include='incolumepy', from=''}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
easygui = "^0.98.3"
rembg = "^2.0.25"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
